# argonautica

./: Cargo.toml
argonautica-c/: Cargo.toml
argonautica-c/src/: error.rs  hash.rs  utils.rs  verify.rs
argonautica-rs/: Cargo.toml  build.rs
argonautica-rs/benches/: bench_crates.rs  bench_fast_but_insecure.rs  bench_inputs.rs  bench_threads.rs
argonautica-rs/examples/: calibrate_timing.rs  example_custom.rs  example_non_blocking.rs  example_simple.rs
argonautica-rs/src/: error.rs  error_kind.rs  hasher.rs  lib.rs  utils.rs  verifier.rs
argonautica-rs/src/backend/c/: decode.rs  encode.rs  hash_raw.rs
argonautica-rs/src/backend/rust/: decode.rs  encode.rs
argonautica-rs/src/backend/rust/core/: mod.rs
argonautica-rs/src/config/: backend.rs  defaults.rs  hasher_config.rs  mod.rs  variant.rs  verifier_config.rs  version.rs
argonautica-rs/src/input/: additional_data.rs  container.rs  mod.rs  password.rs  salt.rs  secret_key.rs
argonautica-rs/src/output/: hash_raw.rs
argonautica-rs/tests/: tests.rs
