[package]
name = "argonautica"
version = "0.2.1" # remember to update html_root_url

authors = ["Brian Myers <brian.carl.myers@gmail.com>"]
categories = ["algorithms", "api-bindings", "authentication", "cryptography"]
description = "Idiomatic Argon2 password hashing for Rust"
documentation = "https://docs.rs/argonautica"
homepage = "https://github.com/bcmyers/argonautica"
keywords = ["argon2", "cryptography", "hash", "password", "security"]
license = "MIT/Apache-2.0"
publish = true
readme = "README.md"
repository = "https://github.com/bcmyers/argonautica"

edition = "2024"

build = "build.rs"
links = "argon2"

[lib]
name = "argonautica"
path = "src/lib.rs"
crate-type = ["lib"]

[features]
benches = ["argon2rs", "criterion", "md5", "rust-argon2", "sha2"]
simd = []
development = []

[dependencies]
base64 = "0.22"
bitflags = "2.8"
failure = "0.1"
futures = { version = "0.3", features = ["executor", "thread-pool"] }
libc = "0.2"
log = "0.4"
nom = "8.0"
num_cpus = "1.10"
rand = "0.9"
scopeguard = "1.0"
serde = { version = "1.0", optional = true, features = ["derive"] }

# benches
argon2rs = { version = "0.2.5", optional = true }
criterion = { version = "0.5", optional = true }
md5 = { version = "0.7", optional = true }
rust-argon2 = { version = "2.1.0", optional = true }
sha2 = { version = "0.10", optional = true }

[build-dependencies]
bindgen = "0.71"
cfg-if = "1.0"
cc = { version = "1.0.37", features = ["parallel"] }
failure = "0.1"
tempfile = "3.1"

[dev-dependencies]
dotenvy = "0.15"
lazy_static = "1.5"
serde_json = "1.0"

[[bench]]
name = "bench_crates"
harness = false
required-features = ["benches"]

[[bench]]
name = "bench_fast_but_insecure"
harness = false
required-features = ["benches"]

[[bench]]
name = "bench_inputs"
harness = false
required-features = ["benches"]

[[bench]]
name = "bench_threads"
harness = false
required-features = ["benches"]

[[example]]
name = "calibrate_timing"
path = "examples/calibrate_timing.rs"

[[example]]
name = "example_custom"
path = "examples/example_custom.rs"

[[example]]
name = "example_non_blocking"
path = "examples/example_non_blocking.rs"

[[example]]
name = "example_serde"
path = "examples/example_serde.rs"
required-features = ["serde"]

[[example]]
name = "example_simple"
path = "examples/example_simple.rs"

[[example]]
name = "example_very_simple"
path = "examples/example_very_simple.rs"

[[example]]
name = "generate_secret_key"
path = "examples/generate_secret_key.rs"

[badges]
travis-ci = { repository = "bcmyers/argonautica", branch = "master" }
